--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
-    <title>Galgje</title>
+    <title>Hang-Man</title>
     <style>.container {
     max-width: 600px;
     margin: 0 auto;
