--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ visibility: hidden;
 
 
 .container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto;
     max-width: 600px;
     margin: 0 auto;
     text-align: center;
