--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ visibility: hidden;
 .container {
     display: grid;
     grid-template-columns: auto;
+    justify-content: center;
     max-width: 600px;
     margin: 0 auto;
     text-align: center;
@@ -56,6 +57,7 @@ button {
 svg{
   display: grid;
   grid-template-columns: auto;
+  justify-content: center;
   margin: auto;
 }
 
