--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ visibility: hidden;
     display: grid;
     grid-template-columns: auto;
     max-width: 600px;
-    margin: 0 auto;
+    margin: auto auto;
     text-align: center;
     padding: 20px;
     font-family: Arial, sans-serif;
