--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8">
     <title>Hang-Man</title>
-    <style>.
-      
+    <style>
 @media only screen and (min-width: 768px) {
-  .keyboard {
-visibility: hidden;
+.keyboard {
+display: none;
 }
 }
 
@@ -87,7 +86,7 @@ svg{
 }
 
 .letter {
-  width: 40px;
+  width: 2em;
   }
 
 .key:hover {
