--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <title>Hang-Man</title>
     <style>
+
 @media only screen and (min-width: 768px) {
 .keyboard {
 display: none;
 }
 }
-
 
 .container {
     display: grid;
@@ -25,29 +25,29 @@ display: none;
 
 h1 {
     font-size: 36px;
-    margin-bottom: 30px;
+    margin-bottom: 1em;
 }
 
 #word {
     font-size: 48px;
-    margin-bottom: 20px;
+    margin-bottom: 0.5em;
 }
 
 #letters {
-    margin-bottom: 20px;
+    margin-bottom: 1em;
 }
 
 #chances {
     font-size: 24px;
-    margin-bottom: 30px;
+    margin-bottom: 1em;
 }
 
 button {
     background-color: #4CAF50;
     color: white;
-    padding: 10px 20px;
+    padding: 1em 2em;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.3em;
     font-size: 16px;
     cursor: pointer;
 }
@@ -65,7 +65,7 @@ svg{
 
 .keyboard {
   
-  margin-top: 50px;
+  margin-top: 2em;
 }
 
 .row {
@@ -76,11 +76,11 @@ svg{
 
 .key {
   display: inline-block;
-  margin: 0 10px;
-  padding: 10px;
+  margin: 0em 0.5em;
+  padding: 0.5em;
   font-size: 20px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 0.25em;
   background-color: #4CAF50;
   cursor: pointer;
 }
