--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ display: none;
 
 .container {
     display: grid;
-    grid-template-columns: auto;
+    grid-template: auto;
     max-width: 600px;
     margin: auto auto;
     text-align: center;
-    padding: 20px;
+    padding: auto;
     font-family: Arial, sans-serif;
 }
 
